# lazy-lab

./: .gitignore  README.md  docker-compose.yaml  install_cli.sh  lab  lab.py
.circleci/: config.yml
@compose/: appwrite.yaml  dev.yaml  sdk.yaml  silent.yaml
@compose/dev_data/db_init/: 01_CREATE_USERS.sql  02_CREATE_DB.sql
@compose/dev_data/firebase/: Dockerfile
@compose/dev_data/firebase/config/: .firebaserc  firebase.json  storage.rules
@compose/dev_data/gateway/: dev.conf
@compose/dev_data/mockoon/: Dockerfile  coordinator.config.js  index.html  lazy-lab.mockoon.json  openapi.json  swagger-ui.html
@compose/envs/: appwrite.env  dev.env  env.dist
@compose/templates/: appwrite.sample  dev.sample
cli/: __init__.py  base.py  composables.py  config.default.json  config.schema.json  config_schema.py  development.py  docker.py  requirements.in  requirements.txt  services.py  utils.py  versions.py
cli/config/: __init__.py  file.py
cli/runtime/: base.py  common.py  requirements.in  requirements.txt  utils.py
cli/runtime/commands/: development.py
cli/runtime/config/: __init__.py  dependencies.py  file.py  schema.py
cli/services/: __init__.py  models.py
firebase/: firebase.json
firebase/True/: firebase-export-metadata.json
services/core-api/: .dockerignore  Dockerfile  pyproject.toml
services/core-api/app/: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  manage.py  mkdocs.yml  pyproject.toml
services/core-api/app/auth_ex/: apps.py
services/core-api/app/config/: asgi.py  settings.py  urls.py  wsgi.py
services/core-api/app/config/settings/: base.py  local.py  test.py
services/core-api/app/config/settins/: base.py
services/core-api/app/docker/: container_bootstrap.sh
services/core-api/app/docs/: index.md  modules.md
services/core-api/app/lazy_lab/: asgi.py  settings.py  urls.py  wsgi.py
services/core-api/app/modules/users/: apps.py  models.py
services/core-api/app/modules/users/migrations/: 0001_initial.py
services/core-api/app/tests/: test_foo.py
services/gateway/: Dockerfile  prod.conf
services/gateway/configs/: dev.conf
services/ui/: Dockerfile
services/ui/handy-scan/: package.json
services/ui/lazy-lab/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+43 files in other folders)
