[tool.poetry]
name = "lazy_lab"
version = "0.0.1"
description = "Just a startpoint"
authors = ["CodeFolks <fcodefolks@example.com>"]
repository = "https://github.com/code-folks/lazy-lab"
documentation = "https://code-folks.github.io/lazy-lab/"
readme = "README.md"
packages = [
  {include = "lazy_lab"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = "^4.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
boto3 = "^1.26.109"
psycopg2 = "^2.9.6"
django-environ = "0.10.0"
django-debug-toolbar = "^4.0.0"
django-extensions = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"
faker = "^18.4.0"
isort = "5.12.0"

[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
preview = true

[tool.mypy]
files = ["lazy_lab"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    # "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    # "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["lazy_lab"]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap= 0
use_parentheses = true
line_length = 88
skip_glob = '*migrations*,*snapshots*'
